--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.6"
   },
-  "devDependencies": {},
   "description": ""
 }
